@@ -4,6 +4,7 @@ import com.clinic.xadmin.constant.visit.VisitStatus;
 import com.clinic.xadmin.dto.response.visit.CreateVisitResponse;
 import com.clinic.xadmin.entity.Clinic;
 import com.clinic.xadmin.entity.Member;
+import com.clinic.xadmin.entity.Room;
 import com.clinic.xadmin.entity.Visit;
 import com.satusehat.constant.ResourceType;
 import com.satusehat.constant.coding.ActCode;
@@ -16,8 +17,12 @@ import org.mapstruct.Mapper;
 import org.mapstruct.factory.Mappers;
 
 import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Mapper
 public interface VisitMapper {
@@ -26,11 +31,12 @@ public interface VisitMapper {
 
   CreateVisitResponse createFrom(Visit visit);
 
-  default Visit convertFromAPIRequest(Member patient, Member practitioner) {
+  default Visit convertFromAPIRequest(Member patient, Member practitioner, Room room) {
     return Visit.builder()
         .patient(patient)
         .practitioner(practitioner)
-        .status(VisitStatus.NOT_STARTED.getBackendValue())
+        .room(room)
+        .status(VisitStatus.PLANNED.getBackendValue())
         .startTime(LocalDateTime.now())
         .build();
   }
@@ -39,11 +45,11 @@ public interface VisitMapper {
     SatuSehatCreateEncounterRequest satuSehatCreateEncounterRequest = new SatuSehatCreateEncounterRequest();
 
     satuSehatCreateEncounterRequest.setStatus(VisitStatus.valueOf(visit.getStatus()).getSatuSehatValue());
-    satuSehatCreateEncounterRequest.setIdentifier(
-        SatuSehatCreateEncounterRequest.EncounterIdentifier.builder()
+    satuSehatCreateEncounterRequest.setIdentifiers(
+        List.of(SatuSehatCreateEncounterRequest.EncounterIdentifier.builder()
             .system(clinic.getSatuSehatClinicReferenceId())
-            .organizationId(visit.getPatient().getSatuSehatPatientReferenceId())
-            .build());
+            .organizationId(visit.getCode())
+            .build()));
     satuSehatCreateEncounterRequest.setActCode(new ActCode(ActCodeEnum.AMB));
     satuSehatCreateEncounterRequest.setPatient(
         Individual.builder()
@@ -56,19 +62,29 @@ public interface VisitMapper {
             SatuSehatCreateEncounterRequest.Participant.builder()
                 .individual(Individual.builder()
                     .fullName(visit.getPractitioner().getFullName())
-                    .satuSehatReferenceId(ResourceType.PRACTITIONER, visit.getPractitioner().getSatuSehatPatientReferenceId())
+                    .satuSehatReferenceId(ResourceType.PRACTITIONER, visit.getPractitioner().getSatuSehatPractitionerReferenceId())
                     .build())
                 .participantType(
-                    Collections.singletonList(new ParticipationType(ParticipationTypeEnum.ATND))
+                    List.of(SatuSehatCreateEncounterRequest.ListParticipant.builder()
+                        .participationType(List.of(new ParticipationType(ParticipationTypeEnum.ATND)))
+                        .build())
                 )
                 .build()
         ));
     satuSehatCreateEncounterRequest.setPeriod(
         SatuSehatCreateEncounterRequest.Period.builder()
-            .start(visit.getStartTime())
+            .start(visit.getStartTime().atZone(ZoneId.systemDefault()).truncatedTo(ChronoUnit.MINUTES).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
             .build()
     );
-    satuSehatCreateEncounterRequest.setLocations(null);
+    satuSehatCreateEncounterRequest.setLocations(
+        Arrays.asList(SatuSehatCreateEncounterRequest.Location.builder()
+            .locationData(
+                Individual.builder()
+                    .satuSehatReferenceId(ResourceType.LOCATION, visit.getRoom().getSatuSehatRoomReferenceId())
+                    .fullName(visit.getRoom().getDescription())
+                    .build())
+            .build())
+    );
     satuSehatCreateEncounterRequest.setStatusHistory(
         Arrays.asList(
             SatuSehatCreateEncounterRequest.StatusHistory.builder()
